# Apache-Spark

./: .sdkmanrc  404.html  README.md  mkdocs.yml  pyproject.toml
data/: vendas.csv
data/delta/pedidos_delta/: .part-00000-252fd57f-0612-413f-88cf-318819ba9c63-c000.snappy.parquet.crc  .part-00000-2b35b3cd-6491-4e68-9610-5d757c59e348-c000.snappy.parquet.crc  .part-00000-3b1dcd53-e037-4ba7-83bb-c1e88b42d215-c000.snappy.parquet.crc  .part-00000-8f8dc67d-c245-47ad-8c4e-e61a1af0c4a5-c000.snappy.parquet.crc  .part-00000-c67d6e70-ad5d-437a-8afa-b330a9b9837a-c000.snappy.parquet.crc  part-00000-252fd57f-0612-413f-88cf-318819ba9c63-c000.snappy.parquet  part-00000-2b35b3cd-6491-4e68-9610-5d757c59e348-c000.snappy.parquet  part-00000-3b1dcd53-e037-4ba7-83bb-c1e88b42d215-c000.snappy.parquet  part-00000-8f8dc67d-c245-47ad-8c4e-e61a1af0c4a5-c000.snappy.parquet  part-00000-c67d6e70-ad5d-437a-8afa-b330a9b9837a-c000.snappy.parquet
data/delta/pedidos_delta/_delta_log/: .00000000000000000000.json.crc  .00000000000000000001.json.crc  .00000000000000000002.json.crc  .00000000000000000003.json.crc  .00000000000000000004.json.crc
docs/: delta.md  iceberg.md  index.md  spark.md
notebooks/: delta_lake.ipynb  iceberg.ipynb
notebooks/.ipynb_checkpoints/: delta_lake-checkpoint.ipynb  iceberg-checkpoint.ipynb
site/: index.html  sitemap.xml
site/delta/: index.html
site/iceberg/: index.html
site/search/: search_index.json
spark/: index.html
