[project]
name = "Apache-Spark"
version = "0.1.0"
description = "Projeto de Engenharia de Dados com Apache Spark, Delta Lake e Apache Iceberg"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyspark==3.5.1",
  "delta-spark==3.2.0",
  "pyiceberg>=0.7.1",
  "jupyterlab>=4.2.0",
  "mkdocs>=1.6.0",
  "mkdocs-material==9.5.39",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
